syntax = "proto3";

option csharp_namespace = "IntegrationAdapter.Protos";
import "Protos/procurementModel.proto";
package medicine_procurement;

service MedicineQuantityAvailableService {
	rpc IsQuantityAvailable (MedicineProcurementProto) returns (MedicineQuantityAvailableProto);
}