syntax = "proto3";

option csharp_namespace = "MedicineProcurement.Protos";

message MedicineProcurementProto {
	string medicineName = 1;
	uint32 quantity = 2;
}

message MedicineQuantityAvailableProto {
	bool available = 1;
}

message MedicinePurchasedSuccessfullyProto {
	bool success = 1;
}